[gd_scene load_steps=3 format=3 uid="uid://dph17wmem8kuf"]

[ext_resource type="Script" uid="uid://yg6f3yyt1xij" path="res://menus/options.gd" id="2_17xhv"]
[ext_resource type="Theme" uid="uid://ducfept6pmkkm" path="res://resources/theme/theme-main.tres" id="2_eb6s3"]

[node name="Options" type="CanvasLayer"]
layer = 128
script = ExtResource("2_17xhv")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.329987, 0.164838, 0.223295, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_eb6s3")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="Control/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Options"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Audio"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Master"

[node name="MasterSlider" type="HSlider" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="MasterVol" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "100%"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SFX" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Sound Effects"

[node name="SFXSlide" type="HSlider" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="SFXVol" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "100%"

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BGM" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "Music"

[node name="BGMSlide" type="HSlider" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="BGMVol" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "100%"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Graphics"

[node name="Label6" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resolution Scale"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="ResScaleSlider" type="HSlider" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 10.0
max_value = 200.0
value = 110.0

[node name="ResScaleLabel" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
text = "100%"

[node name="Label7" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Scaling method"

[node name="SMOptionButton" type="OptionButton" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 5
popup/item_0/text = "Bilinear"
popup/item_0/id = 0
popup/item_1/text = "FSR 1.0"
popup/item_1/id = 1
popup/item_2/text = "FSR 2.1"
popup/item_2/id = 2
popup/item_3/text = "MetalFX (Spatial)"
popup/item_3/id = 3
popup/item_4/text = "MetalFX (Temporal)"
popup/item_4/id = 4

[node name="PixelArtCheckbox" type="CheckBox" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Low resolution mode"

[node name="Label3" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Anti-Aliasing"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "MSAA"

[node name="MSAAOption" type="OptionButton" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 1
item_count = 4
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "2X"
popup/item_1/id = 1
popup/item_2/text = "4X"
popup/item_2/id = 2
popup/item_3/text = "8X"
popup/item_3/id = 3

[node name="FXAACheckBox" type="CheckBox" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Enable FXAA"

[node name="TAACheckBox" type="CheckBox" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Enable TAA"

[node name="Label4" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Shadows"
horizontal_alignment = 1

[node name="ShadowOptions" type="OptionButton" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Some"
popup/item_1/id = 1
popup/item_2/text = "All"
popup/item_2/id = 2

[node name="Label5" type="Label" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Lighting Quality"
horizontal_alignment = 1

[node name="LightingQualityOption" type="OptionButton" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 1
item_count = 2
popup/item_0/text = "Low"
popup/item_0/id = 0
popup/item_1/text = "High"
popup/item_1/id = 1

[node name="SSRCheckBox" type="CheckBox" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Reflections"

[node name="MarginContainer2" type="MarginContainer" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 8

[node name="Back" type="Button" parent="Control/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Back"

[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/SFXSlide" to="." method="_on_sfx_slide_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3/BGMSlide" to="." method="_on_bgm_slide_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/ResScaleSlider" to="." method="_on_res_scale_slider_value_changed"]
[connection signal="item_selected" from="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/SMOptionButton" to="." method="_on_sm_option_button_item_selected"]
[connection signal="toggled" from="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/PixelArtCheckbox" to="." method="_on_check_box_toggled"]
[connection signal="item_selected" from="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/MSAAOption" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/FXAACheckBox" to="." method="_on_fxaa_check_box_toggled"]
[connection signal="toggled" from="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/TAACheckBox" to="." method="_on_taa_check_box_toggled"]
[connection signal="item_selected" from="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/ShadowOptions" to="." method="_on_shadow_options_item_selected"]
[connection signal="item_selected" from="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/LightingQualityOption" to="." method="_on_lighting_quality_option_item_selected"]
[connection signal="toggled" from="Control/VBoxContainer/HBoxContainer/VBoxContainer2/MarginContainer2/PanelContainer/ScrollContainer/MarginContainer/VBoxContainer/SSRCheckBox" to="." method="_on_ssr_check_box_toggled"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer2/Back" to="." method="_on_back_pressed"]
